# radioContainer

./: README.md
.github/workflows/: build-docker-arm64.yml  build-lxc-arm32.yml
deploy/lxc/: rcc.profile  setup.sh
docs/: PERFORMANCE_INTEGRATION.md  cb-timing-v0.3-provisional-edge-power.md  cross-doc-consistency-matrix-v1.md  icd_tnn_↔_radio_logical_ieee_style_template_editable.md  radio_control_api_open_api_v_1_human_readable.md  radio_control_container_architecture_v1.md  radio_control_telemetry_human_readable_sse_v_1.md
docs/contract/: VERSION  error-mapping.json  openapi.yaml  telemetry.schema.json
rcc/: .gitignore  .golangci.yml  CHANGELOG.md  Dockerfile  Makefile  RCC_Quality_Audit_Report.md  README.md  config.example.yaml  go.mod
rcc/.github/workflows/: integration-coverage.yml  performance-benchmarks.yml  test-matrix.yml
rcc/cmd/rcc/: main.go
rcc/docs/: cpp_module_design.md
rcc/internal/: README.md
rcc/internal/adapter/: adapter.go  adapter_test.go  doc.go  errors.go  errors_test.go  golden_test.go
rcc/internal/adaptertest/: conformance.go
rcc/internal/api/: api_test.go  doc.go  error_consistency_test.go  errors.go  errors_test.go  golden_normalize.go  golden_test.go  negative_tests.go  ports.go  response.go  route_contract_analysis.md  routes.go  server.go  set_channel_unit_test.go  silvusmock_e2e_test.go  test_setup.go  unit_tests_test.go
rcc/internal/audit/: audit_unit_test.go  doc.go  logger.go  logger_test.go
rcc/internal/auth/: api_integration_test.go  base64url_jwks_test.go  doc.go  middleware.go  middleware_test.go  route-scope-matrix.md  verifier.go  verifier_test.go
rcc/internal/command/: doc.go  orchestrator.go  orchestrator_bench_test.go  orchestrator_comprehensive_test.go  orchestrator_test.go  ports.go  silvus_band_plan_integration_test.go  telemetry_publish_error_test.go
rcc/internal/config/: doc.go  load.go  load_edge_cases_test.go  load_integration_test.go  load_test.go  silvus_band_plan_test.go  timing.go  timing_test.go  validate.go
rcc/internal/radio/: doc.go  manager.go  manager_test.go
rcc/internal/telemetry/: doc.go  hub.go  hub_bench_slow_test.go  hub_bench_test.go  hub_test.go
rcc/scripts/: anti-peek-check.sh  arch-guard.sh  check-integration-boundaries.sh  install-vegeta.sh  performance-monitor.sh  race-test.sh  setup-vegeta-path.sh
rcc/test/: TEAMS.md
rcc/test-results/: PERFORMANCE_BASELINE.md  REALITY_CHECK_REPORT.md  bench.txt  e2e.jsonl  integration.jsonl  lint.txt  race.txt  unit.jsonl
rcc/test/e2e/: api_happy_path_test.go  api_negative_test.go  contract_e2e_test.go  contract_validator.go  failure_recovery_test.go  heartbeat_timing_test.go  helper_coverage_improved_test.go  helper_coverage_simple_test.go  helper_coverage_test.go  helpers.go  long_running_stability_nightly_test.go  manifest_aware_test.go  multi_radio_concurrency_test.go  route_parity_test.go  sse_validation_test.go  telemetry_contract_e2e_test.go  telemetry_sse_test.go  test_manifest.json
rcc/test/fixtures/: channels.go  errors.go  radios.go  scenarios.go  telemetry.go
rcc/test/harness/: api_test_helper.go  fixed_api_tests.go  harness.go  harness_test.go  integration_test.go
rcc/test/integration/: README.md  cross_package_flows_test.go
rcc/test/perf/: README.md  vegeta_scenarios.sh
rcc/test/performance/: command_timeouts_test.go  heartbeat_timing_test.go
rcc/testdata/adapter/: generic_busy.json  generic_out_of_range.json  mixed_case_matching.json  nil_error.json  silvus_invalid_parameter.json  silvus_node_unavailable.json  silvus_power_out_of_range.json  silvus_radio_offline.json  silvus_rebooting.json  silvus_rf_busy.json  unknown_vendor_error.json  vendor_mapping_generic.json  vendor_mapping_silvus.json
rcc/testdata/api/: capabilities.json  error_invalid_channel_range.json  error_invalid_power_range.json  error_invalid_radio_id.json  error_missing_radio_id.json  health.json  radios.json
rcc/tools/checks/: codes.sh  routes.sh  timing.sh
rcc1/: CMakeLists.txt  README.md
rcc1/cmake/: CompilerWarnings.cmake  Sanitizers.cmake
rcc1/config/: default.yaml
rcc1/docs/: cpp_design_notes.md  status.md
rcc1/include/rcc/: application.hpp  version.hpp.in
rcc1/include/rcc/adapter/: radio_adapter.hpp  silvus_adapter.hpp
rcc1/include/rcc/api/: api_gateway.hpp
rcc1/include/rcc/audit/: audit_logger.hpp
rcc1/include/rcc/auth/: authenticator.hpp
rcc1/include/rcc/command/: orchestrator.hpp
rcc1/include/rcc/common/: types.hpp
rcc1/include/rcc/config/: config_manager.hpp  types.hpp
rcc1/include/rcc/core/: application.hpp  types.hpp
rcc1/include/rcc/radio/: radio_manager.hpp
rcc1/include/rcc/telemetry/: telemetry_hub.hpp
rcc1/src/: CMakeLists.txt  main.cpp
rcc1/src/adapter/: radio_adapter.cpp  silvus_adapter.cpp
rcc1/src/api/: api_gateway.cpp
rcc1/src/audit/: audit_logger.cpp
rcc1/src/auth/: authenticator.cpp
rcc1/src/command/: orchestrator.cpp
rcc1/src/config/: config_manager.cpp
rcc1/src/core/: application.cpp  main.cpp  types.cpp
rcc1/src/radio/: radio_manager.cpp
rcc1/src/telemetry/: telemetry_hub.cpp
rcc1/test/: CMakeLists.txt  smoke_test.cpp
silvus-mock/: Dockerfile  Makefile  README.md  TEST_COVERAGE_REPORT.md  docker-compose.test.yml  go.mod  go.sum  test_debug.go
silvus-mock/cmd/silvusmock/: main.go
silvus-mock/config/: cb-timing.example.yaml  default.yaml  dev.yaml
silvus-mock/docs/: CONFIG.md  README.md
silvus-mock/internal/commands/: commands_test.go  core.go  extensible_server.go  extensible_server_test.go  gps.go  interface.go  optional.go  optional_test.go
silvus-mock/internal/config/: config.go  config_test.go
silvus-mock/internal/contracttests/: README.md  contract_test.go  http_contract_test.go  tcp_contract_test.go  validator.go
silvus-mock/scripts/: install.sh  manage.sh  uninstall.sh
web-ui/: CHANGES.md  PROJECT-STRUCTURE.md  README.md  config.json  go.mod  main.go  open-firewall.sh  run-tests.sh  test-functionality.sh  test-report.md  test-setup.sh  test-with-mock-data.html
web-ui/static/: app.js  index.html  style.css
(+55 files in other folders)
